--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.93.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,6 +41,8 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "@types/react": "^19.1.16",
+    "@types/react-dom": "^19.1.9",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
