--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "sass": "^1.93.2",
-    "web-vitals": "^2.1.4",
-    "zustand": "^5.0.8"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
